Fixed alignment bug

--- a/src/components/Home/styles/be-in-control.scss
+++ b/src/components/Home/styles/be-in-control.scss
@@ -5,7 +5,7 @@
   p {
     padding: 0 1em;
     max-width: 600px;
-    margin: auto;
+    margin: auto auto 1em;
   }
 
   &__info {
@@ -23,7 +23,7 @@
       font-weight: 300;
 
       h3 {
-        margin-top: 1em;
+        margin-top: 0.5em;
         font-size: 1.25em;
         font-weight: 300;
       }
@@ -32,16 +32,9 @@
 
       }
 
-      &:first-child {
-        margin-left: 0;
-      }
-
-      &:last-child {
-        margin-right: 0;
-      }
-
       &__icon {
         height: 40px;
+        margin-bottom: 0.5em;
       }
     }
   }
